[package]
name = "m5atom-mcp3424-ble-receiver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "0.8.2"
btleplug = "0.9.1"
tokio = { version = "1.16.1", features = ["full"]}
futures = "0.3"
chrono = "0.4"
serialport = "4.0.1"
clap = { version = "3.1.2", features = ["derive"] }
